//
//  GameSettingsViewController.swift
//  WordleWithFriends
//
//  Created by Personal on 1/15/22.
//

import UIKit

final class GameSettingsViewController: UIViewController {
  override func viewDidLoad() {
    super.viewDidLoad()
    
    title = "Settings"
    view.backgroundColor = .systemBackground
  }
}
